# MINOS

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  proposal.md  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  researcher.md
.claude/plans/: evtx-support.md
minos/: cli.py  evtx_parser.py  extractor.py  formatter.py  models.py  scorer.py  threat_intel.py
sample_logs/: crowdsec_alert.json  sysmon_1.txt
slides/: pitch.md
tests/: test_evtx_parser.py  test_extractor.py  test_formatter.py  test_scorer.py  test_threat_intel.py
